# pain001-loader-mt101

./: CHANGELOG.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_minimal_parse.py  02_validate_against_pain001.py
pain001_loader_mt101/: __init__.py  loader.py
releases/: v0.0.1.md  v0.0.2.md
tests/: __init__.py  test_loader.py
