[project]
name = "pain001-loader-mt101"
version = "0.0.2"
description = "Convert legacy SWIFT MT101 requests for transfer to ISO 20022 pain.001 flat records."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Sebastien Rousseau", email = "sebastian.rousseau@gmail.com" }]
keywords = [
    "iso20022",
    "pain001",
    "mt101",
    "swift",
    "cbpr",
    "credit-transfer",
    "request-for-transfer",
    "loader",
    "fintech",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pain001 >= 0.0.55, < 1",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8",
    "pytest-cov >= 5",
    "ruff >= 0.6",
    "mypy >= 1.11",
    "interrogate >= 1.7",
]

[project.urls]
Homepage = "https://github.com/sebastienrousseau/pain001-loader-mt101"
Documentation = "https://github.com/sebastienrousseau/pain001-loader-mt101#readme"
Repository = "https://github.com/sebastienrousseau/pain001-loader-mt101"
Issues = "https://github.com/sebastienrousseau/pain001-loader-mt101/issues"
"Parent project" = "https://github.com/sebastienrousseau/pain001"

[build-system]
requires = ["hatchling >= 1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pain001_loader_mt101"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "N", "SIM"]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-q",
    "--cov=pain001_loader_mt101",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pain001_loader_mt101"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
show_missing = true

[tool.interrogate]
fail-under = 100
ignore-init-module = true
ignore-magic = true
verbose = 1

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "pain001.*"
ignore_missing_imports = true
